tambah keterangan image di setiap image dan ubah name:link jadi class:link

--- a/style/style.css
+++ b/style/style.css
@@ -100,7 +100,7 @@ body
     color:#fff
 }
 
-.header .table table tr td[name="link"]
+.header .table table tr td .link
 {
     background:#ff0000
 }
